[package]
name = "mikrotik-metric-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
anyhow = "1.0.100"
mikrotik-model={git="https://github.com/koa/mikrotik-model"}
#mikrotik-model={path = "../mikrotik-model"}
mikrotik-api={version="0.1.0", git="https://github.com/koa/mikrotik-api"}
serde = "1.0.228"
prometheus = { version = "0.14.0", features = ["protobuf"] }
tokio-stream = "0.1.17"
config = "0.15.19"
encoding_rs = "0.8.35"
env_logger = "0.11.8"
log = "0.4.29"
protobuf = "3.7.2"
axum = "0.8.8"
